# dx-sdk-rs-new-0.0.9-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  arwen.sh  build-wasm.sh  publish.sh  sizes.sh  vm-test-build-copy.sh  vm-update.sh
contracts/core/wmoax-swap/: Cargo.toml
contracts/core/wmoax-swap/denali/: unwrap_moax.scen.json  wrap_moax.scen.json
contracts/core/wmoax-swap/interaction/: snippets.sh
contracts/core/wmoax-swap/meta/: Cargo.toml
contracts/core/wmoax-swap/scenarios/: unwrap_moax.scen.json  wrap_moax.scen.json
contracts/core/wmoax-swap/src/: wmoax.rs
contracts/core/wmoax-swap/tests/: scenario_go_test.rs  wmoax_swap_scenario_rs_test.rs
contracts/core/wmoax-swap/wasm/: Cargo.toml
contracts/examples/crypto-zombies/: .gitignore  Cargo.toml
contracts/examples/crypto-zombies/meta/: Cargo.toml
contracts/examples/crypto-zombies/src/: zombie_helper.rs
contracts/examples/crypto-zombies/wasm/: Cargo.toml
contracts/examples/fractional-nfts/meta/: Cargo.toml
contracts/examples/lottery-dct/: Cargo.toml
contracts/examples/lottery-dct/abi/: Cargo.toml
contracts/examples/lottery-dct/interaction/: package.json  playground.ts
contracts/examples/lottery-dct/meta/: Cargo.toml
contracts/examples/lottery-dct/scenarios/: buy-all-tickets-different-accounts.scen.json  buy-more-tickets-than-allowed.scen.json  buy-ticket-after-deadline.scen.json  buy-ticket-after-determined-winner.scen.json  buy-ticket-after-sold-out.scen.json  buy-ticket-all-options.scen.json  buy-ticket-another-account.scen.json  buy-ticket-not-on-whitelist.scen.json  buy-ticket-same-account.scen.json  buy-ticket-second-lottery.scen.json  buy-ticket-wrong-fee.scen.json  buy-ticket.scen.json  complex-prize-distribution.scen.json  determine-winner-different-ticket-holders-winner-acc1.scen.json  determine-winner-early.scen.json  determine-winner-same-ticket-holder.scen.json  determine-winner-split-prize-pool.scen.json  lottery-init.scen.json  lottery-with-burn-percentage.scen.json  start-after-announced-winner.scen.json  start-all-options-bigger-whitelist.scen.json  start-alternative-function-name.scen.json  start-fixed-deadline.scen.json  start-limited-tickets-and-fixed-deadline-invalid-deadline.scen.json  start-limited-tickets-and-fixed-deadline-invalid-ticket-price-arg.scen.json  start-limited-tickets-and-fixed-deadline.scen.json  start-limited-tickets.scen.json  start-second-lottery.scen.json  start-with-all-options.scen.json  start-with-no-options.scen.json
contracts/examples/lottery-dct/src/: lib.rs  lottery.rs
contracts/examples/lottery-dct/tests/: lottery_dct_denali_rs_test.rs  lottery_dct_scenario_rs_test.rs
contracts/examples/lottery-dct/wasm/: Cargo.toml
contracts/examples/multisig/interact-rs/: Cargo.toml  state.toml
contracts/examples/nft-minter/abi/: Cargo.toml
contracts/examples/nft-subscription/: Cargo.toml
contracts/examples/nft-subscription/meta/: Cargo.toml
contracts/examples/nft-subscription/scenarios/: init.scen.json  test_subscription.scen.json
contracts/examples/nft-subscription/src/: lib.rs
contracts/examples/nft-subscription/tests/: nft_subscription_scenario_rs_test.rs  scenario_go_test.rs
contracts/examples/nft-subscription/wasm/: Cargo.toml
contracts/examples/ping-pong-moax/: Cargo.toml  mxsc-template.toml
contracts/examples/ping-pong-moax/abi/: Cargo.toml
contracts/examples/ping-pong-moax/interaction/: Ping-pong-moax.moajs.md  snippets.sh
contracts/examples/ping-pong-moax/meta/: Cargo.toml
contracts/examples/ping-pong-moax/scenarios/: ping-pong-call-ping-after-deadline.scen.json  ping-pong-call-ping-before-activation.scen.json  ping-pong-call-ping-before-beginning.scen.json  ping-pong-call-ping-second-user.scen.json  ping-pong-call-ping-twice.scen.json  ping-pong-call-ping-wrong-ammount.scen.json  ping-pong-call-ping.scen.json  ping-pong-call-pong-all-after-pong.scen.json  ping-pong-call-pong-all-interrupted-1.scen.json  ping-pong-call-pong-all-interrupted-2.scen.json  ping-pong-call-pong-all.steps.json  ping-pong-call-pong-before-deadline.scen.json  ping-pong-call-pong-twice.scen.json  ping-pong-call-pong-without-ping.scen.json  ping-pong-call-pong.scen.json  ping-pong-init.scen.json
contracts/examples/ping-pong-moax/src/: lib.rs  ping_pong.rs
contracts/examples/ping-pong-moax/tests/: ping_pong_moax_denali_rs_test.rs  ping_pong_moax_scenario_rs_test.rs
contracts/examples/ping-pong-moax/wasm/: Cargo.toml
contracts/examples/rewards-distribution/meta/: Cargo.toml
contracts/examples/seed-nft-minter/meta/: Cargo.toml
contracts/feature-tests/basic-features/: Cargo.toml
contracts/modules/: Cargo.toml
contracts/modules/dharitri-wasm-module-bonding-curve/: Cargo.toml
contracts/modules/dharitri-wasm-module-dct/: Cargo.toml
contracts/modules/dharitri-wasm-module-dns/: Cargo.toml
contracts/modules/dharitri-wasm-module-features/: Cargo.toml
contracts/modules/dharitri-wasm-module-governance/: Cargo.toml
contracts/modules/dharitri-wasm-module-pause/: Cargo.toml
contracts/modules/dharitri-wasm-module-users/: Cargo.toml
contracts/modules/src/: dct.rs  default_issue_callbacks.rs  dns.rs  staking.rs
framework/base/: Cargo.toml
framework/base/src/: err_msg.rs  lib.rs
framework/meta/: Cargo.toml
framework/meta/src/: lib.rs  meta_cli.rs  meta_config.rs
framework/meta/tests/: ei_test.rs  stg_process_code_test.rs  template_test.rs
framework/snippets/: Cargo.toml  README.md
framework/snippets/src/: interactor.rs  interactor_dns.rs  interactor_sc_call.rs  interactor_sc_deploy.rs  interactor_sender.rs  interactor_vm_query.rs  lib.rs
framework/wasm-adapter/: Cargo.toml
vm/: Cargo.toml
vm/src/: mem_conv.rs  vm_err_msg.rs
vm/src/tx_execution/: blockchain_vm.rs  exec_call.rs  exec_general_tx.rs  system_sc.rs
vm/src/tx_mock/: tx_async_call_data.rs  tx_back_transfers.rs  tx_cache_balance_util.rs  tx_context.rs  tx_input.rs
vm/src/types/: vm_dct_local_role_flags.rs
vm/src/vm_hooks/: vh_dispatcher.rs  vh_source.rs
vm/src/world_mock/: account_data.rs  blockchain_mock.rs  blockchain_state.rs  dct_instances.rs
(+1254 files in other folders)
