[package]
name = "dharitri-sc"
version = "0.47.3"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@dharitri.com>", "Dharitri <contact@dharitri.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-new"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri smart contract API"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[features]
num-bigint = ["dharitri-sc-codec/num-bigint"]
alloc = ["dharitri-sc-codec/alloc"]
dct-token-payment-legacy-decode = []

[dependencies]
hex-literal = "=0.4.1"
bitflags = "=2.4.2"
num-traits = { version = "=0.2.17", default-features = false }

[dependencies.dharitri-sc-derive]
version = "=0.47.3"
path = "../derive"

[dependencies.dharitri-sc-codec]
version = "=0.18.6"
path = "../../data/codec"
features = ["derive"]
