[package]
name = "dharitri-sc-meta"
version = "0.43.5"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-new"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri smart contract meta-programming tools and build system"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[[bin]]
name = "sc-meta"
path = "src/main.rs"

[features]
template-test-current = []
template-test-released = []

[dependencies]
tokio = { version = "1.24", features = ["full"] }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3.0"
copy_dir = "0.1.2"
zip = "0.6.4"
serde_json = "1.0"
anyhow = "1.0.44"
rustc_version = "0.4"
toml = { version = "0.5.8", features = ["preserve_order"] }
ruplacer = "0.8.1"
clap = { version = "4.1.0", features = ["derive"] }
colored = "2.0"
pathdiff = "0.2.1"
common-path = "1.0.0"
lazy_static = "1.4.0"
convert_case = "0.6.0"
hex = "0.4"
wasmparser = "0.113.1"
wasmprinter = "0.2.67"

[dependencies.dharitri-sc]
version = "=0.43.5"
path = "../base"
features = ["alloc", "num-bigint", "promises"]

