[package]
name = "dharitri-sc-wasm-adapter"
version = "0.47.3"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@dharitri.com>",
    "Dharitri <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Battula-anil-app-could/dx-sdk-rs-new"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly VM API wrapper"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools::ffi",
]

[dependencies.dharitri-sc]
version = "=0.47.3"
path = "../base"
