[package]
name = "cryptozombies"
version = "0.0.0"
authors = ["Alin Cruceat <alin.cruceat@dharitri.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "0.39.4"
path = "../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.39.4"
path = "../../../framework/scenario"
