[package]
name = "lottery-dct"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@dharitri.com>",]
edition = "2021"
publish = false

[lib]
path = "src/lottery.rs"

[dependencies.dharitri-sc]
version = "0.41.3"
path = "../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.41.3"
path = "../../../framework/scenario"
