[package]
name = "ping-pong-moax"
version = "0.0.2"
authors = [ "Bruda Claudiu-Marcel <claudiu725@yahoo.com>",]
edition = "2021"
publish = false

[lib]
path = "src/ping_pong.rs"

[dependencies.dharitri-sc]
version = "0.43.4"
path = "../../../framework/base"

[dev-dependencies.dharitri-sc-scenario]
version = "0.43.4"
path = "../../../framework/scenario"

