[package]
name = "fractional-nfts-meta"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.fractional-nfts]
path = ".."

[dependencies.dharitri-sc-meta]
version = "0.47.3"
path = "../../../../framework/meta"
default-features = false
