[package]
name = "nft-minter-abi"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@dharitri.com>"]
edition = "2018"
publish = false

[dependencies.nft-minter]
path = ".."

[dependencies.dharitri-wasm]
version = "0.6.8"
path = "../../../../dharitri-wasm"

[dependencies.dharitri-wasm-debug]
version = "0.6.8"
path = "../../../../dharitri-wasm-debug"
