[package]
name = "seed-nft-minter-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@dharitri.com>"]

[dev-dependencies]

[dependencies.seed-nft-minter]
path = ".."

[dependencies.dharitri-wasm-debug]
version = "0.10.7"
path = "../../../../dharitri-wasm-debug"
