[package]
name = "rust-snippets-generator-test-meta"
version = "0.0.0"
authors = ["Dorin Marian Iancu <dorin.iancu@dharitri.com>"]
edition = "2021"
publish = false

[dependencies.rust-snippets-generator-test]
path = ".."

[dependencies.dharitri-sc-meta]
version = "0.43.4"
path = "../../../../framework/meta"
